--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -188,6 +188,14 @@
     * gray-900
     */
     --color-gray-900: 31, 41, 55;
+
+    --color-red-500: 239, 68, 68;
+    --color-red-600: 220, 38, 38;
+    --color-red-700: 185, 28, 28;
+
+    --color-red-800: 153, 27, 27;
+
+    --color-red-900: 127, 29, 29;
   }
 
   a {
